# GNN_Practice

./: .gitignore  main.py  pyproject.toml  requirements.txt  testing_gcn.ipynb  testing_graphs.ipynb
