[project]
name = "gnn-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.15"
dependencies = [
    "torch==1.13.1+cu117",
    "torchvision==0.14.1+cu117",
    "torchaudio==0.13.1+cu117",
    "pandas",
    "ipykernel",
    "jupyter-client",
    "gensim==4.3.0",
    "torch-scatter==2.1.0+pt113cu117",
    "torch-sparse==0.6.16+pt113cu117",
    "torch-cluster==1.6.0+pt113cu117",
    "torch-spline-conv==1.2.1+pt113cu117",
    "torch-geometric==2.2.0",
    "networkx==2.8.8",
    "matplotlib==3.6.3",
    "node2vec==0.4.6",
    "seaborn==0.12.2",
    "scikit-learn==1.2.0",
    "tensorflow==2.10.1",
    "deepchem==2.7.1",
    "torch-geometric-temporal==0.54.0",
    "captum==0.6.0",
    ]
[tool.uv]
index-strategy = 'unsafe-best-match'

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu117"


[[tool.uv.index]]
url = "https://data.pyg.org/whl/torch-1.13.1+cu117.html"
format = "flat"
packages = [
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "torch-spline-conv",
    "torch-geometric",
]