[project]
name = "gnn-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.15"
dependencies = [
    "torch==1.13.1+cu117",
    "torchvision==0.14.1+cu117",
    "torchaudio==0.13.1+cu117",
    "pandas",
    "ipykernel",
    "numpy",
    "scipy",
    "scikit-learn",
    "smart_open",
    "wrapt",
    "jupyter-client",
    "gensim==4.3.0",
    "torch-scatter==2.1.0+pt113cu117",
    "torch-sparse==0.6.16+pt113cu117",
    "torch-cluster==1.6.0+pt113cu117",
    "torch-spline-conv==1.2.1+pt113cu117",
    "torch-geometric==2.2.0",
    "networkx==2.8.8",
    "matplotlib==3.6.3",
    "node2vec==0.4.6",
    "seaborn==0.12.2",
    "scikit-learn==1.2.0",
    "deepchem==2.7.1",
    "torch-geometric-temporal==0.54.0",
    "captum==0.6.0",
    "tensorflow>=2.13.1",
    "kagglehub>=0.2.9",
]
#[tool.uv]
#index-strategy = 'unsafe-best-match'
[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cu117" },
]
torchvision = [
    { index = "pytorch-cu117" },
]
torchaudio = [
    { index = "pytorch-cu117" },
]
torch-scatter = [
    { index = "pyg-cu117" },
]
torch-sparse = [
    { index = "pyg-cu117" },
]
torch-cluster = [
    { index = "pyg-cu117" },
]
torch-spline-conv = [
    { index = "pyg-cu117" },
]


[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "pyg-cu117"
url = "https://data.pyg.org/whl/torch-1.13.1+cu117.html"
format = "flat"
explicit = true
